--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 <h1>Organize Your Photos Like Never Before</h1>
                 <p>Seamlessly manage, edit, and share your precious memories with our intelligent photo management platform. AI-powered organization meets beautiful design.</p>
                 <div class="hero-buttons">
-                    <button class="btn-primary" onclick="showSignupModal()"><a href=".main-folder/templates/upload.html">Get Started Free</a></button>
+                    <button class="btn-primary" onclick="showSignupModal()"><a href="main-folder/templates/upload.html">Get Started Free</a></button>
                     <button class="btn-secondary" onclick="scrollToFeatures()">Learn More</button>
                 </div>
             </div>
